agregar nombre como comentario en footer y en index

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <title>Gelery App</title>
   </head>
   <body>
+     <!-- presentado por mauricio arcila cano -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
